<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8"
    android:background="#ECF0F3"
    tools:context=".StudentDeck">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_weight="1">
            <soup.neumorphism.NeumorphCardView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_45sdp"
                style="@style/Widget.Neumorph.CardView"
                android:layout_gravity="center"
                app:background_color="#ECF0F3">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_icons8_polymer"
                    android:contentDescription="@string/logo" />
            </soup.neumorphism.NeumorphCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_weight="1">
            <soup.neumorphism.NeumorphImageButton
                android:id="@+id/home_button"
                android:layout_width="@dimen/_52sdp"
                style="@style/Widget.Neumorph.ImageButton"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                android:layout_height="@dimen/_52sdp"
                android:src="@drawable/ic_home"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/hello"
                android:textColor="#808283"
                android:textSize="@dimen/_30ssp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="Kushal"
                android:textColor="#ff7200"
                android:textSize="@dimen/_30ssp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <soup.neumorphism.NeumorphCardView
                android:id="@+id/neumorphCardView4"
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearance">

                <ImageView
                    android:layout_width="@dimen/_52sdp"
                    android:layout_height="@dimen/_62sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_student_dash" />

            </soup.neumorphism.NeumorphCardView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/attedence"
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                android:clickable="true">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_user"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/add_users"
                    android:textColor="#808283" />
            </soup.neumorphism.NeumorphCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <soup.neumorphism.NeumorphCardView
                android:id="@+id/neumorphCardView5"
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
                android:clickable="true">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/ic_manage_user"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:textSize="@dimen/_15ssp"
                    android:lines="2"
                    android:textAlignment="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/manage_users"
                    android:textColor="#808283" />
            </soup.neumorphism.NeumorphCardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/logout_button3"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="145dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            android:layout_height="145dp"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/log_out"
                android:textColor="#857E7E"
                android:textSize="@dimen/_19ssp" />
        </soup.neumorphism.NeumorphCardView>
    </LinearLayout>



</LinearLayout>